grafana-deployment/grafana-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ui
  namespace: monitoring
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.tomer-aws-project.online
    secretName: grafana-secret-cert
  rules:
  - host: argo.tomer-aws-project.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-server
            port:
              name: http
